--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,18 @@
 
 .main {
   flex: 6;
-  padding: 20px;
+  padding: 10px;
   background-color: #fff;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 iframe {
-  width: 100%;
+  width: 600px;
   height: 400px;
   margin-bottom: 20px;
+  /* border: none; */
+  margin: 10px;
+  transform: scale(0.7) translate(10%, 10%);
+  
 }
