--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,23 @@
   background-color: #fff;
   display: flex;
   flex-wrap: wrap;
+  gap: 1px; /* 隙間の大きさを指定 */
+  justify-content: flex-start; /* 要素を左寄せに配置 */
 }
 
 iframe {
-  width: 600px;
-  height: 400px;
-  margin-bottom: 20px;
-  /* border: none; */
-  margin: 10px;
-  transform: scale(0.7) translate(10%, 10%);
+  flex: 0 0 calc(33%); /* 要素の幅を計算して指定 */
+  height: 450px;
+  margin-bottom: 2px;
+  border: none;
+  transform: scale(1);
+}
+@media (max-width: 1350px) {
+  .main {
+    justify-content: space-between; /* 要素を均等に配置 */
+  }
   
+  iframe {
+    flex: 0 0 calc(50%); /* 要素の幅を50%に設定 */
+  }
 }
