--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ header{
   padding: 1px 30px;
   color: white;
   text-align: left;
-
+  
 }
 select {
   margin-left:20px;
@@ -68,9 +68,9 @@ label {
 
 
 .main {
-  /* flex: 7; */
   padding: 10px;
   background-color: #fff;
+  width:100%
 
 }
 .iframe-list-container{
